Corrected css, wrong width causing rouble on project page

--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -2446,7 +2446,7 @@ ul#menus, ul#menus li {
 
 #right {
 	float: right;
-	margin-right: 12px;
+	/*margin-right: 12px;*/
 }
 
 .profile_right_column {
@@ -3525,7 +3525,7 @@ body img {
 	background-color: white;
 	font-size: 12px;
 	padding: 6px;
-	width: 745px;
+	width: 770px;
 }
 
 .notice {
@@ -3533,7 +3533,7 @@ body img {
 	background-color: white;
 	font-size: 12px;
 	padding: 6px;
-	width: 745px;
+	width: 770px;
 }
 
 .error {
@@ -3541,7 +3541,7 @@ body img {
 	background-color: white;
 	font-size: 12px;
 	padding: 6px;
-	width: 745px;
+	width: 770px;
 }
 
 .errorExplanation {
